--- a/.gitignore
+++ b/.gitignore
@@ -1,306 +1,18 @@
-# Specifies intentionally untracked files to ignore when using Git
-# http://git-scm.com/docs/gitignore
+node:internal/errors:478
+    ErrorCaptureStackTrace(err);
+    ^
 
-*~
-*.sw[mnpcod]
-.tmp
-*.tmp
-*.tmp.*
-UserInterfaceState.xcuserstate
-$RECYCLE.BIN/
-
-*.log
-log.txt
-
-
-/.sourcemaps
-/.versions
-/coverage
-
-# Ionic
-/.ionic
-/www
-/platforms
-/plugins
-
-# Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
-
-# Node
-/node_modules
-npm-debug.log
-yarn-error.log
-
-# IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-project
-*.sublime-workspace
-
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-
-# Miscellaneous
-/.angular
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
-.DS_Store
-Thumbs.db
-
-
-
-import http from 'node:http'
-import url from 'node:url'
-import { createHttpTerminator } from 'http-terminator'
-
-import express from 'express'
-import helmet from 'helmet'
-import cors from 'cors'
-import prometheusClient from 'prom-client'
-import path from 'path'
-import glob from 'glob'
-import { promisify } from 'util'
-import { startConnectionWithMongoDb } from '#core/data/index.js'
-
-import requestLogging from './middlewares/requestLogging.js'
-import correlationId from './middlewares/correlationId.js'
-import { createSwaggerRouter } from './swagger.js'
-
-export default class ApiServer {
-  #isReady = false
-  #express = undefined
-
-  #mountMiddlewares() {
-    const maxRequestBodySize =
-      global.environment.server.maxRequestBodySize || '100mb'
-
-    this.#express.use(helmet({ contentSecurityPolicy: false }))
-    this.#express.use(express.json({ limit: maxRequestBodySize }))
-    this.#express.use(
-      express.urlencoded({ limit: maxRequestBodySize, extended: true })
-    )
-    this.#express.use(cors())
-
-    this.#express.use(requestLogging())
-    this.#express.use(correlationId())
-  }
-
-  async #mountRoutes() {
-    this.#mountHealthRoute()
-    this.#mountMetricsRoute()
-    await this.#autoMountFeatureRoutes()
-  }
-
-  #mountHealthRoute() {
-    this.#express.get('/health', (_, res) => {
-      if (!this.#isReady) {
-        return res.status(503).send('Server shutting down')
-      }
-
-      res.send('Healthy')
-    })
-  }
-
-  #mountMetricsRoute() {
-    const register = new prometheusClient.Registry()
-    prometheusClient.collectDefaultMetrics({ register })
-
-    this.#express.get('/metrics', async (_, res) => {
-      const metrics = await register.metrics()
-      res.header('Content-Type', register.contentType)
-      res.send(metrics)
-    })
-  }
-
-  #mountSwaggerRoute(versionPath) {
-    if (
-      process.env.NODE_ENV !== 'Local' &&
-      process.env.NODE_ENV !== 'Development'
-    ) {
-      return
-    }
-
-    const swaggerFiles = path.resolve(
-      path.dirname(''),
-      'src',
-      'doc',
-      'swagger',
-      '**/*.yaml'
-    )
-
-    const routerSwagger = createSwaggerRouter(versionPath, [swaggerFiles])
-
-    this.#express.use(versionPath, routerSwagger)
-  }
-
-  async #autoMountFeatureRoutes(versionPath = '/v1') {
-    const featuresPath = path.resolve(
-      path.dirname(''),
-      'src',
-      'features',
-      '**/*Router.js'
-    )
-
-    const globAsync = promisify(glob)
-    const routers = await globAsync(featuresPath, {
-      windowsPathsNoEscape: true
-    })
-
-    this.#mountSwaggerRoute(versionPath)
-
-    routers.forEach(async (router) => {
-      const urlRouter = url.pathToFileURL(router)
-      const routes = await import(urlRouter)
-      this.#express.use(versionPath, routes.default)
-    })
-  }
-
-  async #bootstrap() {
-    global.logger.info('bootstraping application')
-
-    this.#express = express()
-    this.#express.set('port', global.environment.server.port)
-
-    startConnectionWithMongoDb(global.environment.mongo)
-
-    this.#mountMiddlewares()
-    await this.#mountRoutes()
-
-    this.#isReady = true
-  }
-
-  async launch() {
-    await this.#bootstrap()
-
-    const serverError = (err) => {
-      if (err.syscall !== 'listen') {
-        throw err
-      }
-
-      throw err
-    }
-
-    const serverListening = () => {
-      const addressInfo = server.address()
-      global.logger.info(
-        `Server started on ${addressInfo.address}:${global.environment.server.port}`
-      )
-    }
-
-    const server = http.createServer(this.#express)
-    const httpTerminator = createHttpTerminator({ server })
-
-    server.on('error', serverError)
-    server.on('listening', serverListening)
-    server.listen(global.environment.server.port)
-
-    const unhandledRejectionHandler = (err) => {
-      const log = global.logger || console
-      log.error('Unhandled Promise Rejection: err: ', err.message)
-      log.error(err.stack)
-    }
-
-    const gracefulShutdownHandler = async () => {
-      global.logger.info('Server received shutdown signal')
-      this.#isReady = false
-
-      global.logger.info('Waiting for open connections to be finished')
-      await httpTerminator.terminate()
-
-      global.logger.info('Server is closed')
-      process.exit(0)
-    }
-
-    process.on('unhandledRejection', unhandledRejectionHandler)
-    process.on('SIGINT', gracefulShutdownHandler)
-    process.on('SIGTERM', gracefulShutdownHandler)
-  }
+Error [ERR_UNSUPPORTED_DIR_IMPORT]: Directory import 'H:\Documents\fee-management-backend\src\core\data\mssql' is not supported resolving ES modules imported from H:\Documents\fee-management-backend\src\core\data\index.js
+    at new NodeError (node:internal/errors:387:5)
+    at finalizeResolution (node:internal/modules/esm/resolve:326:17)
+    at moduleResolve (node:internal/modules/esm/resolve:907:10)
+    at defaultResolve (node:internal/modules/esm/resolve:1115:11)
+    at nextResolve (node:internal/modules/esm/loader:163:28)
+    at ESMLoader.resolve (node:internal/modules/esm/loader:837:30)
+    at ESMLoader.getModuleJob (node:internal/modules/esm/loader:424:18)
+    at ModuleWrap.<anonymous> (node:internal/modules/esm/module_job:76:40)
+    at link (node:internal/modules/esm/module_job:75:36) {
+  code: 'ERR_UNSUPPORTED_DIR_IMPORT',
+  url: 'file:///H:/Documents/fee-management-backend/src/core/data/mssql'
 }
-
-
-import mssql from 'mssql'
-
-export async function connectToFeeMgmtDb() {
-  const { ...props } = global.environment.sqlserver
-  
-  const config = {
-    ...props,
-    options: {
-      encrypt: false,
-      trustServerCertificate: true
-    }
-  }
-  await mssql.close()
-
-  return mssql.connect(config)
-}
-
-export async function executeStoreProcedure(connection, query, parameters = {}) {
-  const request = connection.request()
-
-  for (const key of Object.keys(parameters)) {
-    request.input(key, parameters[key])
-  }
-
-  const { recordset } = await request.execute(query)
-
-  await mssql.close()
-
-  if (recordset?.length === 0) return []
-
-  return recordset
-}
-
-import mongoose from 'mongoose'
-
-mongoose.Promise = global.Promise
-
-export const startConnectionWithMongoDb = ({ uri, autoIndex, keepAlive }) => {
-  const mongodbUri = uri
-
-  const connection = mongoose.connect(mongodbUri, {
-    autoIndex,
-    keepAlive
-  })
-
-  connection.then((db) => db).catch((err) => console.log(err))
-  return connection
-}
-
-export const configureSchemaMongoToReturnId = (
-  typeConvert,
-  SchemaModel,
-  enableVirtuals = true
-) => {
-  SchemaModel.set(typeConvert, {
-    transform: (document, returnObject) => {
-      delete returnObject._id
-      return returnObject
-    },
-    virtuals: enableVirtuals
-  })
-}
-
-
-
-
+[nodemon] app crashed - waiting for file changes before starting...
