--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,32 @@
-node:internal/errors:478
-    ErrorCaptureStackTrace(err);
-    ^
+import mssql from 'mssql'
 
-Error [ERR_UNSUPPORTED_DIR_IMPORT]: Directory import 'H:\Documents\fee-management-backend\src\core\data\mssql' is not supported resolving ES modules imported from H:\Documents\fee-management-backend\src\core\data\index.js
-    at new NodeError (node:internal/errors:387:5)
-    at finalizeResolution (node:internal/modules/esm/resolve:326:17)
-    at moduleResolve (node:internal/modules/esm/resolve:907:10)
-    at defaultResolve (node:internal/modules/esm/resolve:1115:11)
-    at nextResolve (node:internal/modules/esm/loader:163:28)
-    at ESMLoader.resolve (node:internal/modules/esm/loader:837:30)
-    at ESMLoader.getModuleJob (node:internal/modules/esm/loader:424:18)
-    at ModuleWrap.<anonymous> (node:internal/modules/esm/module_job:76:40)
-    at link (node:internal/modules/esm/module_job:75:36) {
-  code: 'ERR_UNSUPPORTED_DIR_IMPORT',
-  url: 'file:///H:/Documents/fee-management-backend/src/core/data/mssql'
+export async function connectToFeeMgmtDb() {
+  const { ...props } = global.environment.sqlserver
+  
+  const config = {
+    ...props,
+    options: {
+      encrypt: false,
+      trustServerCertificate: true
+    }
+  }
+  await mssql.close()
+
+  return mssql.connect(config)
 }
-[nodemon] app crashed - waiting for file changes before starting...
+
+export async function executeStoreProcedure(connection, query, parameters = {}) {
+  const request = connection.request()
+
+  for (const key of Object.keys(parameters)) {
+    request.input(key, parameters[key])
+  }
+
+  const { recordset } = await request.execute(query)
+
+  await mssql.close()
+
+  if (recordset?.length === 0) return []
+
+  return recordset
+}
