--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ export async function executeStoreProcedure(connection, query, parameters = {}) 
     const parameters = { group_id: 1 }; // Opcional: omitir group_id para trazer todos
     const result = await executeStoreProcedure(connection, query, parameters);
     global.logger.info('Procedure Result:', result);
+
+ global.logger.error('Failed to connect to SQL Server:', err.message);
+
+   global.logger.info('Connected to SQL Server successfully.');
