--- a/.gitignore
+++ b/.gitignore
@@ -1,189 +1,143 @@
-import http from 'node:http'
-import url from 'node:url'
-import { createHttpTerminator } from 'http-terminator'
+const environment = {
+  app: {
+    name: ''
+  },
+  server: {
+    port: 3333,
+    maxRequestBodySize: '100mb'
+  },
+  logging: {
+    level: 'debug'
+  },
+  kafka: {
+    brokers: []
+  },
+  rabbitmq: {
+    url: ''
+  },
+  mongo: {
+    autoIndex: true,
+    keepAlive: true,
+    uri: ''
+  },
 
-import express from 'express'
-import helmet from 'helmet'
-import cors from 'cors'
-import prometheusClient from 'prom-client'
-import path from 'path'
-import glob from 'glob'
-import { promisify } from 'util'
-// import { startConnectionWithSql } from '#core/data/index.js'
-import { connectToFeeMgmtDb, executeStoreProcedure } from '#src/core/data/mssql/index.js'
+  caseUrl: 'http://casemanagement-backend-http-host.safra-applications-dev',
+  CustomerUrl: 'http://customersearch-backend-http-host.safra-applications-dev',
+  UserUrl: 'http://usermanagement-backend-http-host.safra-applications-dev',
+  FeeUrl: 'http://feemanagement-backend-http-host.safra-applications-dev',
+  ConductorUrl: 'http://conductor-ui.safra-applications-dev/api/workflow',
+  JackUrl: 'http://jackhenry-backend-http-host.safra-applications-dev',
 
-import requestLogging from './middlewares/requestLogging.js'
-import correlationId from './middlewares/correlationId.js'
-import { createSwaggerRouter } from './swagger.js'
-
-export default class ApiServer {
-  #isReady = false
-  #express = undefined
-
-  #mountMiddlewares() {
-    const maxRequestBodySize =
-      global.environment.server.maxRequestBodySize || '100mb'
-
-    this.#express.use(helmet({ contentSecurityPolicy: false }))
-    this.#express.use(express.json({ limit: maxRequestBodySize }))
-    this.#express.use(
-      express.urlencoded({ limit: maxRequestBodySize, extended: true })
-    )
-    this.#express.use(cors())
-
-    this.#express.use(requestLogging())
-    this.#express.use(correlationId())
-  }
-
-  async #mountRoutes() {
-    this.#mountHealthRoute()
-    this.#mountMetricsRoute()
-    await this.#autoMountFeatureRoutes()
-  }
-
-  #mountHealthRoute() {
-    this.#express.get('/health', (_, res) => {
-      if (!this.#isReady) {
-        return res.status(503).send('Server shutting down')
-      }
-
-      res.send('Healthy')
-    })
-  }
-
-  #mountMetricsRoute() {
-    const register = new prometheusClient.Registry()
-    prometheusClient.collectDefaultMetrics({ register })
-
-    this.#express.get('/metrics', async (_, res) => {
-      const metrics = await register.metrics()
-      res.header('Content-Type', register.contentType)
-      res.send(metrics)
-    })
-  }
-
-  #mountSwaggerRoute(versionPath) {
-    if (
-      process.env.NODE_ENV !== 'Local' &&
-      process.env.NODE_ENV !== 'Development'
-    ) {
-      return
+  dev: {
+    scheduleUrls: {
+      IntlPB3: 'https://minio-ui.dev.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNJbnRsUEIzLlBERg==&version_id=null',
+      USPBIndividual3: 'https://minio-ui.dev.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCSW5kaXZpZHVhbDMucGRm&version_id=null',
+      USPBCorporation3: 'https://minio-ui.dev.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCQ29ycG9yYXRpb24zLnBkZg==&version_id=null',
     }
-
-    const swaggerFiles = path.resolve(
-      path.dirname(''),
-      'src',
-      'doc',
-      'swagger',
-      '**/*.yaml'
-    )
-
-    const routerSwagger = createSwaggerRouter(versionPath, [swaggerFiles])
-
-    this.#express.use(versionPath, routerSwagger)
-  }
-
-  async #autoMountFeatureRoutes(versionPath = '/v1') {
-    const featuresPath = path.resolve(
-      path.dirname(''),
-      'src',
-      'features',
-      '**/*Router.js'
-    )
-
-    const globAsync = promisify(glob)
-    const routers = await globAsync(featuresPath, {
-      windowsPathsNoEscape: true
-    })
-
-    this.#mountSwaggerRoute(versionPath)
-
-    routers.forEach(async (router) => {
-      const urlRouter = url.pathToFileURL(router)
-      const routes = await import(urlRouter)
-      this.#express.use(versionPath, routes.default)
-    })
-  }
-
-  async #bootstrap() {
-    global.logger.info('bootstraping application')
-
-    this.#express = express()
-    this.#express.set('port', global.environment.server.port)
-
-    try{
-      const connection = await connectToFeeMgmtDb();
-      global.logger.info('Connected to SQL Server successfully.');
-      
-      const query = 'sp_get_feegroupinfo';
-      const parameters = { group_id: 1 };
-      const result = await executeStoreProcedure(connection, query, parameters);
-      global.logger.info('Procedure Result:', result);
-
-      global.sqlConnection = connection;
-    }catch (err){
-      global.logger.error('Failed to connect to SQL Server:', err.message);
+  },
+  local: {
+    scheduleUrls: {
+      IntlPB3: 'https://minio-ui.qa.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNJbnRsUEIzLlBERg==&version_id=null',
+      USPBIndividual3: 'https://minio-ui.qa.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCSW5kaXZpZHVhbDMucGRm&version_id=null',
+      USPBCorporation3: 'https://minio-ui.qa.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCQ29ycG9yYXRpb24zLnBkZg==&version_id=null',
     }
-
-    this.#mountMiddlewares()
-    await this.#mountRoutes()
-
-    this.#isReady = true
-  }
-
-  async launch() {
-    await this.#bootstrap()
-
-    const serverError = (err) => {
-      if (err.syscall !== 'listen') {
-        throw err
-      }
-
-      throw err
+  },
+  qa: {
+    scheduleUrls: {
+      IntlPB3: 'https://minio-ui.qa.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNJbnRsUEIzLlBERg==&version_id=null',
+      USPBIndividual3: 'https://minio-ui.qa.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCSW5kaXZpZHVhbDMucGRm&version_id=null',
+      USPBCorporation3: 'https://minio-ui.qa.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCQ29ycG9yYXRpb24zLnBkZg==&version_id=null',
     }
-
-    const serverListening = () => {
-      const addressInfo = server.address()
-      global.logger.info(
-        `Server started on ${addressInfo.address}:${global.environment.server.port}`
-      )
+  },
+  prd: {
+    scheduleUrls: {
+      IntlPB3: 'https://minio-ui.prd.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNJbnRsUEIzLlBERg==&version_id=null',
+      USPBIndividual3: 'https://minio-ui.prd.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCSW5kaXZpZHVhbDMucGRm&version_id=null',
+      USPBCorporation3: 'https://minio-ui.prd.k8s.safra.int/api/v1/buckets/conductor-public/objects/download?preview=true&prefix=U2NoZWR1bGVvZkZlZXNVU1BCQ29ycG9yYXRpb24zLnBkZg==&version_id=null',
     }
+  },
 
-    const server = http.createServer(this.#express)
-    const httpTerminator = createHttpTerminator({ server })
+  sqlserver: {
+    server: '',
+    user: '',
+    password: '',
+    database: ''
+  },
 
-    server.on('error', serverError)
-    server.on('listening', serverListening)
-    server.listen(global.environment.server.port)
+};
 
-    const unhandledRejectionHandler = (err) => {
-      const log = global.logger || console
-      log.error('Unhandled Promise Rejection: err: ', err.message)
-      log.error(err.stack)
-    }
-
-    const gracefulShutdownHandler = async () => {
-      global.logger.info('Server received shutdown signal')
-      this.#isReady = false
-
-      global.logger.info('Waiting for open connections to be finished')
-      await httpTerminator.terminate()
-
-      global.logger.info('Server is closed')
-      process.exit(0)
-    }
-
-    process.on('unhandledRejection', unhandledRejectionHandler)
-    process.on('SIGINT', gracefulShutdownHandler)
-    process.on('SIGTERM', gracefulShutdownHandler)
-  }
+function getEnviromentConfig(){
+  const env = process.env.NODE_ENV?.toLocaleLowerCase() || 'dev';
+  console.log('current node>>>>>', env);
+  console.log('enviroment node>>>>>', environment[env]?.scheduleUrls)
+  return environment[env]?.scheduleUrls || {}
 }
 
+export { getEnviromentConfig };
+export default environment
 
 
-[18:56:48.659] INFO (22028): Starting configuration for env: Local
-[18:56:48.660] INFO (22028): Loading env using file H:\Documents\fee-management-backend\.env
-[18:56:48.672] INFO (22028): bootstraping application
-[18:56:48.677] ERROR (22028): Failed to connect to SQL Server:
-[18:56:49.015] INFO (22028): Server started on :::3333
+Achei esse arquivo launch.json
+{
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Api",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/src/app/api/index.js",
+      "env": {
+        "NODE_ENV": "Local",
+        "APP_NAME": "snb-fee-management",
+        "CONFIG_SERVER_APP_NAME": "snb-fee-management",
+        "CONFIG_SERVER_URL": "https://config.dev.k8s.safra.int",
+        "CONFIG_SERVER_USER": "safraconfigserver",
+        "CONFIG_SERVER_PASSWORD": "Sc$7@gfwertrlM22",
+        "SERVER_PORT": "3333",
+        "MONGODB_URI": "mongodb://mongodbsnb:rstNze28W6@dash.dev.k8s.safra.int:27017/snb",
+        "SQLSERVER_SERVER": "nydev01.snb.safra.int",
+        "SQLSERVER_USER": "userFeeMgmtConductor",
+        "SQLSERVER_PASSWORD": "userF33MgmtCond",
+        "SQLSERVER_DATABASE": "FeeMgmt"
+      }
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Worker",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/src/app/worker/index.js",
+      "args": [
+        "relative path inside src/worker/namePathWorker/nameFileWorker.js"
+      ],
+      "env": {
+        "NODE_ENV": "Local",
+        "CONFIG_SERVER_APP_NAME": "config-server-app-name",
+        "CONFIG_SERVER_URL": "https://config.dev.k8s.safra.int",
+        "CONFIG_SERVER_USER": "safraconfigserver",
+        "CONFIG_SERVER_PASSWORD": "Sc$7@gfwertrlM22"
+      }
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Seed",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/src/core/data/seeds/run.js",
+      "env": {
+        "NODE_ENV": "Local"
+      }
+    }
+  ]
+}
 
